package wr1ttenyu.f1nal.study.designpattern.pattern23.state;

public interface State {

    void deduceMoney();

    boolean raffle();

    boolean dispensePrize();

}
